<resources>
    <string name="app_name">Sensor Reader</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_sensors">Sensors</string>
    <string name="menu_logs">Logs</string>
    <string name="menu_settings">Settings</string>
    <string name="logging_placeholder">This is where logs will be shown.</string>
    <string name="scanning">Scanning for sensors…</string>
    <string name="default_mac">00:00:00:00:00</string>
    <string name="default_name">MJ_HT_V1</string>
    <string name="default_temp">25,2 °C</string>
    <string name="temperature_template">%1$s °C</string>
    <string name="humidity_template">%1$s %%</string>
    <string name="battery_template">%1$s %%</string>
    <string name="humidity_icon_name">humidity icon</string>
    <string name="temperature_icon_name">temperature icon</string>
    <string name="default_humidity">43,2 %</string>
    <string name="enable_logging">Enable Logging</string>
    <string name="info_button_desc">info button</string>
</resources>