<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_sensors"
            android:icon="@drawable/ic_thermometer_white_24dp"
            android:iconTint="@color/colorTextDark"
            android:title="@string/menu_sensors" />
        <item
            android:id="@+id/nav_logging"
            android:icon="@drawable/ic_baseline_android_24"
            android:iconTint="@color/colorTextDark"
            android:title="@string/menu_logs" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_baseline_settings_24"
            android:iconTint="@color/colorTextDark"
            android:title="@string/menu_settings" />
    </group>
</menu>