<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimaryDark"
    android:elevation="2dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/sensor_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/foregroundElementColor"
        app:cardBackgroundColor="@color/foregroundElementColor"
        app:cardElevation="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryDark"
            android:backgroundTint="@color/foregroundElementColor">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/sensor_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/default_name"
                        android:textColor="@color/colorTextDark"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/spacer"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:textColor="@color/colorPrimaryDark" />

                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/enable_logging"
                        style="@style/Platform.MaterialComponents"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="0.2"
                        android:buttonTint="@color/colorTextDark"
                        android:checked="true"
                        android:enabled="true"
                        android:saveEnabled="true"
                        android:text="@string/enable_logging"
                        android:textColor="@color/colorTextDark"
                        android:textSize="14sp"
                        android:visibility="visible"
                        app:showText="false"
                        app:switchTextAppearance="@style/Platform.MaterialComponents"
                        app:thumbTint="@drawable/switch_colors"
                        app:trackTint="@android:color/secondary_text_dark"
                        app:useMaterialThemeColors="true" />

                </LinearLayout>

                <TextView
                    android:id="@+id/sensor_mac"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/default_mac"
                    android:textColor="@color/colorTextDark" />

                <LinearLayout
                    android:id="@+id/status_bar_sensor"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/colorPrimary"
                    android:baselineAligned="false"
                    android:orientation="horizontal">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="8dp"
                            android:orientation="horizontal"
                            app:layout_constraintTop_toTopOf="parent">

                            <ImageView
                                android:id="@+id/temperature_icon"
                                android:layout_width="30dp"
                                android:layout_height="40dp"
                                android:layout_weight="0.5"
                                android:contentDescription="@string/temperature_icon_name"
                                app:srcCompat="@drawable/ic_thermometer_white_24dp" />

                            <TextView
                                android:id="@+id/temperature"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/default_temp"
                                android:textColor="@color/colorTextDark"
                                android:textSize="30sp" />

                            <ImageView
                                android:id="@+id/humidity_icon"
                                android:layout_width="30dp"
                                android:layout_height="40dp"
                                android:layout_weight="0.5"
                                android:contentDescription="@string/humidity_icon_name"
                                app:srcCompat="@drawable/ic_water_percent"
                                app:tint="@color/colorPrimary" />

                            <TextView
                                android:id="@+id/humidity"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/default_humidity"
                                android:textColor="@color/colorTextDark"
                                android:textSize="30sp" />
                        </LinearLayout>

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <ImageButton
                            android:id="@+id/infoButton"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_marginTop="8dp"
                            android:layout_marginEnd="8dp"
                            android:background="@null"
                            android:contentDescription="@string/info_button_desc"
                            android:scaleType="fitXY"
                            android:tint="@color/colorTextDark"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_bias="0.6"
                            app:srcCompat="@drawable/ic_baseline_info_48" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                </LinearLayout>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>